log
Thu 21 Mar 2024 04:03:24 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
dfc4013
Thu 21 Mar 2024 04:07:57 PM UTC: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:9: error: ‘L’ redeclared as different kind of symbol
   63 |   List* L = create_list();
      |         ^
exercises.c:60:21: note: previous definition of ‘L’ with type ‘List *’
   60 | int sumaLista(List *L)
      |               ~~~~~~^
Compilation failed
ca08336
Thu 21 Mar 2024 04:08:05 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
e070988
Thu 21 Mar 2024 04:08:42 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:8: error: unused variable ‘lista’ [-Werror=unused-variable]
   63 |   int *lista;
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
b5583ac
Thu 21 Mar 2024 04:12:52 PM UTC: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:22: error: implicit declaration of function ‘len’ [-Werror=implicit-function-declaration]
   63 |   for(int i = 0; i < len(L); i++)
      |                      ^~~
exercises.c:65:22: error: implicit declaration of function ‘get’; did you mean ‘getw’? [-Werror=implicit-function-declaration]
   65 |       suma += *(int*)get(L, i);
      |                      ^~~
      |                      getw
exercises.c:65:16: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   65 |       suma += *(int*)get(L, i);
      |                ^
cc1: all warnings being treated as errors
Compilation failed
1a9beed
